fix the vertical alignment of the side buttons

--- a/crate_project/static/less/crate.less
+++ b/crate_project/static/less/crate.less
@@ -204,6 +204,8 @@ footer {
 
     .action-buttons {
       float: right;
+      margin-top: 1.5em;
+
       > a, > div {
         float: left;
         display: inline-block;
